# hk-quant-strategy-platform

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  烟蒂股筛选.ipynb
lib/: analyzer_parameter.py  bundle.py  instrument_probe.py  refresh.py  test_bundle_model.py  test_fetchers_module.py  test_refresh_module.py  test_storage.py  test_utils.py
lib/hk_quant_strategy_platform/: analyzer_function.py  crawler.py  diagnostic_utils.py  fetchers.py  refresh.py  utils.py
lib/stock_data_analysis/: storage.py
src/test/: test_analyzer_function_module.py  test_analyzer_parameter_module.py  test_core_utils.py  test_crawler_module.py  test_diagnostic_utils_module.py  test_instrument_probe_module.py  test_storage.py
stock_data/: bs_code2name.jsonl  bs_name2code.jsonl  cf_code2name.jsonl  cf_name2code.jsonl  is_code2name.jsonl  is_name2code.jsonl  stock_ticker_diff.txt  简单全体港股股票信息.csv
stock_data/globals/: ListOfSecurities_c.csv  ListOfSecurities_c.xlsx  company_overview_df.parquet  hk_spot_all.parquet  manifest.json
stock_data/tickers/00001/: manifest.json
stock_data/tickers/00001/datasets/: company_profile.parquet  dividend_history.parquet  financial_bs_yearly.parquet  financial_cf_yearly.parquet  financial_indicator_snapshot.parquet  financial_is_yearly.parquet  security_profile.parquet
stock_data/tickers/00002/: manifest.json
stock_data/tickers/00002/datasets/: company_profile.parquet  dividend_history.parquet  financial_bs_yearly.parquet  financial_cf_yearly.parquet  financial_is_yearly.parquet  (+2 more)
stock_data/tickers/00003/: manifest.json
(+7 files in other folders)
